added missing photo

--- a/our-team.htm
+++ b/our-team.htm
@@ -417,7 +417,19 @@
                   <div class="">
                     <img
                       class="portrait"
+                      src="./assets/img/Robinson Junior Tanyi.png"
+                    />
+                  </div>
+                  <div class="">
+                    <img
+                      class="portrait"
                       src="https://www.arcgis.com/sharing/rest/content/items/015b4153a8e94201aa90f615ebc2eb40/resources/images/widget_468/1675348235149.jpeg"
+                    />
+                  </div>
+                  <div class="">
+                    <img
+                      class="portrait"
+                      src="./assets/img/NIls Michalke.webp"
                     />
                   </div>
                 </div>
@@ -501,6 +513,7 @@
                       <img class="portrait" src="./assets/img/momani.jpg" />
                     </div>
                   </div>
+
                   <div class="d-flex w-80 mx-auto pt-3 pb-4 px-2">
                     <div class="w-33 px-2">
                       <div class="text-center fs-4 fw-500 mb-3">
@@ -576,8 +589,37 @@
                       </div>
                     </div>
                   </div>
+                  <div
+                    class="w-80 bg-black py-2 d-flex justify-content-around mx-auto"
+                  >
+                    <div>
+                      <img
+                        class="portrait"
+                        src="./assets/img/Edgar Kipkurui Mutai.png"
+                      />
+                    </div>
+
+                    <div class="d-none">
+                      <img
+                        class="portrait"
+                        src="./assets/img/Edgar Kipkurui Mutai.png"
+                      />
+                    </div>
+                    <div>
+                      <img
+                        class="portrait"
+                        src="./assets/img/Steve Hermes.png"
+                      />
+                    </div>
+                    <div>
+                      <img
+                        class="portrait"
+                        src="./assets/img/Klaus Strasser.jpg"
+                      />
+                    </div>
+                  </div>
                   <div class="d-flex w-80 mx-auto pt-3 pb-4 px-2">
-                    <div class="w-33 px-2" style="margin-top: 200px">
+                    <div class="w-33 px-2">
                       <div class="text-center fs-4 fw-500 mb-3">
                         Edgar Kipkurui Mutai
                       </div>
@@ -597,7 +639,7 @@
                         <p>Email: mutaie@unhcr.org</p>
                       </div>
                     </div>
-                    <div class="w-33 px-2" style="margin-top: 200px">
+                    <div class="w-33 px-2">
                       <div class="text-center fs-4 fw-500 mb-3">
                         Steve Hermes
                       </div>
@@ -619,7 +661,7 @@
                         <p></p>
                       </div>
                     </div>
-                    <div class="w-33 px-2" style="margin-top: 200px">
+                    <div class="w-33 px-2">
                       <div class="text-center fs-4 fw-500 mb-3">
                         Klaus Strasser
                       </div>
@@ -676,7 +718,7 @@
                   </div>
                 </div>
                 <div class="d-flex w-80 bg-black mx-auto pt-3 pb-4">
-                  <div class="w-33 px-2 ml-3">
+                  <div class="w-33 px-2">
                     <div class="text-center fs-4 fw-500 mb-3">
                       Sonia Miszczak
                     </div>
@@ -735,38 +777,26 @@
                     </div>
                   </div>
                 </div>
-                <div
-                  class="w-80 bg-black py-2 d-flex justify-content-around mx-auto"
-                  style="height: 200px"
-                >
-                  <div>
-                    <!-- <img
-                      class="portrait"
-                      src="https://www.arcgis.com/sharing/rest/content/items/015b4153a8e94201aa90f615ebc2eb40/resources/images/widget_306/1669887326201.jpg"
-                    /> -->
+                <div class="w-80 bg-black py-2 mx-auto d-flex">
+                  <div class="w-33 text-center">
+                    <img class="portrait" src="./assets/img/Ida Maruti.png" />
                   </div>
 
-                  <div class="d-none">
-                    <!-- <img
+                  <div class="w-33 text-center">
+                    <img
                       class="portrait"
-                      src="https://www.arcgis.com/sharing/rest/content/items/015b4153a8e94201aa90f615ebc2eb40/resources/images/widget_303/1669887163732.jpg"
-                    /> -->
+                      src="./assets/img/Flora Hajdini.png"
+                    />
                   </div>
-                  <div>
-                    <!-- <img
+                  <div class="w-33 text-center">
+                    <img
                       class="portrait"
-                      src="https://www.arcgis.com/sharing/rest/content/items/015b4153a8e94201aa90f615ebc2eb40/resources/images/widget_317/1669887837264.jpg"
-                    /> -->
-                  </div>
-                  <div>
-                    <!-- <img
-                      class="portrait"
-                      src="https://www.arcgis.com/sharing/rest/content/items/015b4153a8e94201aa90f615ebc2eb40/resources/images/widget_325/1669887952112.jpg"
-                    /> -->
+                      src="./assets/img/Ankur Agarwal.png"
+                    />
                   </div>
                 </div>
                 <div class="d-flex w-80 bg-black mx-auto pt-3 pb-4">
-                  <div class="w-33 px-2 ml-3">
+                  <div class="w-33 px-2">
                     <div class="text-center fs-4 fw-500 mb-3">Ida Maruti</div>
                     <div class="fs-6 mx-2">
                       <p>
